--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.15",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "remixicon": "^4.7.0",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
